--- a/wally.toml
+++ b/wally.toml
@@ -6,10 +6,7 @@ realm = "shared"
 
 [dependencies]
 Knit = "sleitnick/knit@1.0.9"
-ReplicaService = "brittonfischer/replicaservice@0.1.0"
 Loader = "sleitnick/loader@1.0.2"
 Component = "sleitnick/component@2.4.2"
 Spring = "brittonfischer/spring@0.1.0"
-
-[server-dependencies]
-ProfileService = "brittonfischer/profileservice@2.1.5"
+Fusion = "eltobb/fusion@0.1.1-beta"
