development: updated fusion ui, fixed controller

--- a/wally.toml
+++ b/wally.toml
@@ -9,4 +9,4 @@ Knit = "sleitnick/knit@1.0.9"
 Loader = "sleitnick/loader@1.0.2"
 Component = "sleitnick/component@2.4.2"
 Spring = "brittonfischer/spring@0.1.0"
-Fusion = "eltobb/fusion@0.1.1-beta"
+Fusion = "elttob/fusion@0.1.1-beta"
